# corewar

./: .gitignore  CMakeLists.txt  Makefile  Makefile-new  README.md  TODO.md  asm  assembler.h  author  byte.c  copy_element.c  errors  hey  heyheyhey.s  main.c  op.h  parse.c  tanalysis.py  tbinary-auto.sh  tbinary.py  tbinary.sh  tcorewar.py  test.s  test.sh  test_all.s  tests.py  torgvsour.py  torgvsour_run.py  tscan.sh  tversus.py  utils.c  write_arguments.c
asm-proj/: Makefile
asm-proj/commands/: commands_1.c  commands_4.c  help_command.c
asm-proj/includes/: assembler.h
asm-proj/src/: error_manager.c  insert_node.c  main.c  parse_args.c  parse_command.c  utils.c
asm-proj/tests/: test_asm.py
champion/: champ.s
commands/: add.c  aff.c  and.c  arg_handling.c  commands_1.c  commands_2.c  commands_3.c  commands_4.c  fork.c  help_command.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
includes/: assembler.h
libft/: Makefile
libft/ft_printf/: print_string.c
libft/includes/: libft.h
parser/: asm.h  ft_parse.c  parse_command.c  parse_label.c
src/: advanced_parser.c  commands_hashtable.c  enlarge_table.c  error_manager.c  find_node.c  freeshers.c  ft_parse.c  get_args.c  get_command_name.c  get_header.c  get_label.c  globals.c  insert_command.c  insert_label.c  insert_node.c  main.c  output_to_file.c  parse.c  parse_args.c  parse_command.c  parse_exec.c  parse_header.c  parse_name_and_comment.c  parser.c  unit_tests.c  utils.c
src/hashtable/: enlarge_ht_command.c  enlarge_ht_label.c  ht_elem_find.c  insert_command.c  insert_label.c
src/tests_for_parser/: test_get_args.s  unit_tests.c
test/: README_test.txt  tbinary.sh  tcorewar.py  test.sh  torgvsour.py  torgvsour_run.py  tversus.py
test/champs/: Car0.cor  aff.cor  sti.cor
test/original_n_champs/champs/: Car.cor
tests/: asm_comp  asm_custom  asm_stand  asm_standart  test_last_labels.s
tests_for_parser/: test_get_command_name.s  test_get_label.s  tests.h
vm/: Makefile  arg_utils.c  cars.c  champions.c  champions_parse.c  corewar.h  fight.c  init_arena.c  main.c  operations.c  parse_input.c  pque.h  priority_queue.c  test_utils.c  testutils.c  utils.c  vis.h
vm-proj/: Makefile
vm-proj/src/: cars.c  champions_parse.c  fight.c  init_arena.c  main.c  operations.c  parse_input.c  priority_queue.c  utils.c
vm-proj/src/commands/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
vm-proj/src/commands/common/: arg_preparation.c  arg_utils.c  clone_utils.c  command_utils.c  validation.c
vm-proj/src/vis/: catch_keyboard.c  champ_interface.c  checks_interface.c  color_utils.c  draw_utils.c  finish_interface.c  info_interface.c  start_interface.c  update_info.c
vm/commands/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
vm/commands/common/: and_or_xor.c  arg_preparation.c  arg_utils.c  clone_utils.c  command_utils.c  foreach_functions.c  sub-add.c  test_utils.c  utils.c  validation.c
vm/vis/: bytes_interface.c  car_interface.c  catch_keyboard.c  champ_interface.c  checks_interface.c  color_interface.c  color_utils.c  draw_utils.c  finish_interface.c  info_interface.c  init_vis.c  start_interface.c  update_info.c  utils.c  vis.h
vm_champs/: sti.s
vm_champs/champs/: 420.cor  sti.cor
vm_champs/champs-src/: aff.s
